--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ nav{
     z-index:25;
 }
 
-
 .logo{
     height: 60px;
 }
@@ -36,7 +35,8 @@ nav{
 }
 
 .header-banner{
-    position: absolute;
+    /* position: absolute; */
+    position: relative;
     height: 80vh;
     width: 100%;
     display: flex;
@@ -48,7 +48,6 @@ nav{
     width: 100%;
     height: 100%;
     content: '';
-    position: absolute;
     z-index: 10;
     top: 0;
     left: 0;
@@ -82,16 +81,19 @@ nav{
 
 .products{
     /* position: relative; */
+    color: white;
     background-color: #020202;
-    /* z-index: 2; */
+    z-index: 2000;
+    overflow: hidden;
 }
 
 .product img{
-    margin: 5px;
+    margin: auto;
+    margin-top: 10px;
     width: 250px;
     height: 400px;
 }
-
+    
 .about-banner{
     /* background-color: black; */
     /* opacity: 0.7;     */
@@ -106,7 +108,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40vh;
+    padding: 40vh 40vw;
     color: #fefefe;
 }
 
@@ -115,10 +117,9 @@ nav{
 }
 
 .about-details-1{
-    margin: 10px 10vw;
-    width: 80vw;
+    margin: 10px ;
+    width: 100vw;
     display: flex;
-    /* flex-direction: column; */
 }
 
 .about-details-1 img{
@@ -131,3 +132,38 @@ nav{
     font-size: 20px;
 }
 
+.why-banner{
+    background-image: url('./images/ourservice-banner.jpg');
+    height: 100vh;
+    width: 100vw;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+.why-banner-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40vh 40vw;
+    color: white;
+    text-shadow: 2px 2px #858585;
+}
+
+.contact-banner{
+    background-image: url('./images/contactus.jpg');
+    height: 80vh;
+    width: 100vw;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+.contact-banner-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30vh 40vw;
+    color: white;
+    text-shadow: 2px 2px #858585;
+}
