--- a/slideshow.css
+++ b/slideshow.css
@@ -67,19 +67,19 @@
 }
 
 /* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
+.my-fade {
+  -webkit-animation-name: my-fade;
   -webkit-animation-duration: 1.5s;
-  animation-name: fade;
+  animation-name: my-fade;
   animation-duration: 1.5s;
 }
 
-@-webkit-keyframes fade {
+@-webkit-keyframes my-fade {
   from {opacity: .4}
   to {opacity: 1}
 }
 
-@keyframes fade {
+@keyframes my-fade {
   from {opacity: .4}
   to {opacity: 1}
 }
