--- a/slideshow.css
+++ b/slideshow.css
@@ -1,8 +1,9 @@
-* {box-sizing:border-box}
+* {
+  box-sizing: border-box;
+}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100vw;
   position: relative;
   margin: auto;
   display: flex;
@@ -13,14 +14,16 @@
 /* Hide the images by default */
 .mySlides {
   display: none;
+  margin: 15px;
 }
-.mySlides img{
-    height: 290px;
-    width: 290px;
+.mySlides img {
+  height: 290px;
+  width: 290px;
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -42,8 +45,9 @@
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
@@ -57,15 +61,6 @@
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
 /* Fading animation */
 .my-fade {
   -webkit-animation-name: my-fade;
@@ -75,11 +70,43 @@
 }
 
 @-webkit-keyframes my-fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes my-fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .slideshow-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .mySlides {
+    display: block;
+  }
+
+  .prev,
+  .next {
+    display: none;
+  }
+
+  .my-fade {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -o-transition: none !important;
+    transition: none !important;
+  }
 }
