--- a/slideshow.css
+++ b/slideshow.css
@@ -6,6 +6,7 @@
 .slideshow-container {
   position: relative;
   margin: auto;
+  width: 90vw;
   display: flex;
   flex-direction: row;
   overflow: hidden;
@@ -14,7 +15,10 @@
 /* Hide the images by default */
 .mySlides {
   display: none;
+  height: 450px;
   margin: 15px;
+  background-color: #f1f1f1;
+  box-shadow: 2px 2px 10px #dfdada;
 }
 .mySlides img {
   height: 290px;
