--- a/about.css
+++ b/about.css
@@ -3,7 +3,7 @@
   /* opacity: 0.7;     */
   background-image: url("./images/aboutus-banner.jpg");
   height: 100vh;
-  width: 100vw;
+  /* width: 100vw; */
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
