--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,7 @@
 .contact-banner {
   background-image: url("./images/contactus.jpg");
   height: 80vh;
-  width: 100vw;
+  overflow: hidden;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -23,9 +23,12 @@
 .my-contacts {
   margin-bottom: 20px;
   display: flex;
+  flex-direction: column;
 }
 
 .contact-details {
   flex-grow: 1;
   text-align: center;
+  padding: 20px;
+  /* border: 1px solid black; */
 }
