--- a/about.css
+++ b/about.css
@@ -1,19 +1,22 @@
 .about-banner {
-  /* background-color: black; */
-  /* opacity: 0.7;     */
-  background-image: url("./images/aboutus-banner.jpg");
-  height: 100vh;
-  /* width: 100vw; */
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-image: url("./images/aboutus-new.jpg");
+  height: 80vh;
+  overflow: hidden;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
-
 .about-banner-content {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 40vh 40vw;
+  text-align: center;
+  padding: 40vh 10vw;
   color: #fefefe;
+  position: absolute;
+  top: 0;
+  z-index: 20;
+  text-shadow: 2px 2px 10px #0f0f0f;
 }
 
 .about-details {
@@ -35,4 +38,10 @@
 .about-details-1 p {
   padding: 10px;
   font-size: 20px;
+}
+
+@media only screen and (min-width: 500px) {
+  .about-banner-content {
+    padding: 40vh 30vw;
+  }
 }
