--- a/about.css
+++ b/about.css
@@ -1,6 +1,11 @@
 .about-banner {
-  background-image: url("./images/aboutus-new.jpg");
-  height: 80vh;
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url("./images/aboutus-new.jpg");
+  height: 90vh;
   overflow: hidden;
   background-attachment: fixed;
   background-position: center;
@@ -25,14 +30,16 @@
 }
 
 .about-details-1 {
-  margin: 10px;
-  /* width: 100vw; */
+  width: 100vw;
+  margin: auto;
   display: flex;
+  flex-direction: column;
 }
 
 .about-details-1 img {
   height: 250px;
   width: 250px;
+  margin: auto;
 }
 
 .about-details-1 p {
@@ -42,6 +49,16 @@
 
 @media only screen and (min-width: 500px) {
   .about-banner-content {
-    padding: 40vh 30vw;
+    padding-top: 40vh;
+    padding-left: 30vw;
+  }
+  .about-details-1 {
+    width: 100vw;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+  }
+  .about-details-content {
+    width: 60vw;
   }
 }
