--- a/contact.css
+++ b/contact.css
@@ -1,5 +1,10 @@
 .contact-banner {
-  background-image: url("./images/contactus.jpg");
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url("./images/contactus.jpg");
   height: 80vh;
   overflow: hidden;
   background-attachment: fixed;
