--- a/ourservices.css
+++ b/ourservices.css
@@ -1,7 +1,11 @@
 .why-banner {
-  background-image: url("./images/ourservice-banner.jpg");
-  height: 100vh;
-  width: 100vw;
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.1)
+    ),
+    url("./images/ourservice-banner.jpg");
+  height: 90vh;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -11,7 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 40vh 40vw;
+  padding: 40vh 10vw;
   color: white;
-  text-shadow: 2px 2px #858585;
+  text-shadow: 5px 5px 10px #0f0f0f;
 }
