--- a/slideshow.css
+++ b/slideshow.css
@@ -34,7 +34,7 @@
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: rgb(170, 170, 170);
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
