--- a/ourservices.css
+++ b/ourservices.css
@@ -20,10 +20,28 @@
   text-shadow: 5px 5px 10px #0f0f0f;
 }
 .our-service-element {
-  display: flex;
+  /* display: flex; */
+  width: 80vw;
+  margin: 20px auto;
+  padding: 10px;
+  text-align: center;
+  box-shadow: 2px 2px 10px #0f0f0f;
+}
+.our-service-element h5 {
+  font-weight: 800;
+  background-color: #14c9f7;
+  padding: 5px;
 }
 
 .our-service-element img {
   /* height: 400px; */
   width: 200px;
+  margin: 10px;
+}
+
+@media only screen and (min-width: 500px) {
+  .our-service-element {
+    display: flex;
+    height: 230px;
+  }
 }
