--- a/slideshow.css
+++ b/slideshow.css
@@ -15,14 +15,19 @@
 /* Hide the images by default */
 .mySlides {
   display: none;
-  height: 450px;
+  /* height: 450px; */
   margin: 15px;
   background-color: #f1f1f1;
   box-shadow: 2px 2px 10px #dfdada;
+  text-align: center;
 }
 .mySlides img {
   height: 290px;
   width: 290px;
+}
+.mySlides h5 {
+  font-weight: 900;
+  font-size: 24px;
 }
 
 /* Next & previous buttons */
@@ -100,6 +105,9 @@
 
   .mySlides {
     display: block;
+  }
+  .mySlides img {
+    width: 100%;
   }
 
   .prev,
