--- a/style.css
+++ b/style.css
@@ -124,11 +124,11 @@ nav {
   flex-wrap: wrap;
 }
 .our-customer-img {
-  margin: 15px;
+  margin: 15px auto;
 }
 .our-customer-img img {
-  height: 150px;
-  width: 300px;
+  height: 90px;
+  width: 160px;
 }
 /* footer  */
 footer {
@@ -206,6 +206,9 @@ footer {
 }
 
 @media only screen and (min-width: 500px) {
+  .our-customer-img {
+    margin: 15px;
+  }
   footer {
     display: flex;
     flex-wrap: nowrap;
