--- a/style.css
+++ b/style.css
@@ -75,9 +75,10 @@ nav {
 }
 .header-banner .header-banner-content {
   position: absolute;
-  top: 50vh;
+  top: 40vh;
   z-index: 20;
   text-align: center;
+  font-weight: bolder;
   color: #fefefe;
 }
 
@@ -204,8 +205,25 @@ footer {
   font-weight: 200;
   color: rgb(37, 187, 247);
 }
+.my-whatsapp {
+  z-index: 100;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  padding: 15px;
+}
+.my-whatsapp img {
+  height: 60px;
+  width: 60px;
+}
 
 @media only screen and (min-width: 500px) {
+  .why-choose-us-container {
+    height: 60vh;
+  }
+  .our-customers-container {
+    height: 50vh;
+  }
   .our-customer-img {
     margin: 15px;
   }
